// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogTitle is rendered correctly to match the snapshot default 1`] = `
.emotion-0 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:visited {
  color: inherit;
}

.emotion-0:hover {
  color: hsla(148, 72%, 80%);
}

.emotion-2 {
  font-size: 2.2rem;
}

.emotion-4 {
  margin-left: 0.5rem;
  font-size: 1.7rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 80%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 80%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 80%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 50%)",
            "bgOnHover": "hsla(212, 72%, 60%)",
            "shadow": "hsla(212, 72%, 80%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 50%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 40%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 40%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 60%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 90%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 90%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 30%)",
            "shadow": "hsla(148, 72%, 20%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 20%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 60%)",
          },
        },
      },
    }
  }
>
  <BlogTitle
    subtitle="Test Subtitle"
    title="Test Title"
  >
    <Link
      href="/"
      passHref={true}
    >
      <LogoWrapperAnchor
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <a
          className="emotion-0 emotion-1"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <Logo
            subtitle="Test Subtitle"
            title="Test Title"
          >
            <TitleSpan>
              <span
                className="emotion-2 emotion-3"
              >
                Test Title
              </span>
            </TitleSpan>
            <SubtitleSpan>
              <span
                className="emotion-4 emotion-5"
              >
                Test Subtitle
              </span>
            </SubtitleSpan>
          </Logo>
        </a>
      </LogoWrapperAnchor>
    </Link>
  </BlogTitle>
</ThemeProvider>
`;

exports[`BlogTitle is rendered correctly to match the snapshot when set linkToTopPage option to false 1`] = `
.emotion-0 {
  font-size: 2.2rem;
}

.emotion-2 {
  margin-left: 0.5rem;
  font-size: 1.7rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 80%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 80%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 80%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 50%)",
            "bgOnHover": "hsla(212, 72%, 60%)",
            "shadow": "hsla(212, 72%, 80%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 50%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 40%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 40%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 60%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 90%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 90%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 30%)",
            "shadow": "hsla(148, 72%, 20%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 20%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 60%)",
          },
        },
      },
    }
  }
>
  <BlogTitle
    linkToTopPage={false}
    subtitle="Test Subtitle"
    title="Test Title"
  >
    <Logo
      subtitle="Test Subtitle"
      title="Test Title"
    >
      <TitleSpan>
        <span
          className="emotion-0 emotion-1"
        >
          Test Title
        </span>
      </TitleSpan>
      <SubtitleSpan>
        <span
          className="emotion-2 emotion-3"
        >
          Test Subtitle
        </span>
      </SubtitleSpan>
    </Logo>
  </BlogTitle>
</ThemeProvider>
`;
